--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-name: #KarthikB
+name: "#KarthikB"
 markdown: kramdown
 permalink: /:categories/:year/:month/:day/:title
+# Google services
+google_analytics: UA-102083319-1 
+
+
